# llm-infer-oni

./: .env  .env.example  .gitignore  README.md  config.py  input_controller_test.txt  main.py  pyproject.toml  test.py
base/: __init__.py  agent.py  brain.py  executor.py  middleware.py  perception.py
core/: __init__.py  input_controller.py  llm_decision.py  screen_capture.py  ui_agent.py
logs/screenshots/20250504_221609/: actions.jsonl  step_0001_1746368170_analysis.txt  step_0001_1746368170_before_result.json  step_0002_1746368222_analysis.txt  step_0002_1746368222_before_result.json  step_0003_1746368245_analysis.txt  step_0003_1746368245_before_result.json  step_0004_1746368292_analysis.txt  step_0004_1746368292_before_result.json
logs/screenshots/20250505_000557/: actions.jsonl  step_0001_1746374758_analysis.txt  step_0001_1746374758_before_result.json
logs/screenshots/20250505_001131/: actions.jsonl  step_0001_1746375092_analysis.txt  step_0001_1746375092_before_result.json  step_0002_1746375160_analysis.txt  step_0002_1746375160_before_result.json
logs/screenshots/20250505_001507/: actions.jsonl  step_0001_1746375308_analysis.txt
logs/screenshots/20250505_001913/: actions.jsonl  step_0001_1746375553_analysis.txt
logs/screenshots/20250505_002315/: actions.jsonl  (+18 more)
middlewares/: __init__.py  logging_mw.py  screenshot_logger.py  state_tracking.py  throttling.py
prompts/: browser.txt  default.txt  office.txt  oxygen_not_included.txt  text_input.txt
tests/: test_input_controller.py
utils/: __init__.py  logger.py  prompt_manager.py
